--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -2,6 +2,10 @@
 \label{chapter_hydrogeomorph}
 \chaptermark{Hydrometeorological controls on landscape erosion}
 
+\begin{chapquote}{Alisdair Gray, from \textit{Lanark: a life in 4 books}}
+``Thaw looked up and saw huge chunks of rock hacked about by time and weather''
+\end{chapquote}
+
 \section{Introduction}
 
 Landscape evolution is punctuated by intense erosive episodes driven by flood events triggered by intense rainfall \citep{Wolman1960,newson1980geomorphological,Costa1995}. Understanding the role rainfall plays in erosional processes is of importance to both long-term landscape evolution studies \citep[e.g.][]{rinaldo1995geomorphological,tucker1997drainage,Tucker2000}, which have long sought effective ways of parameterising rainfall patterns within models \citep[e.g][]{Eagleson1978}.  Catchment sensitivity to rainfall variability is also important in the context of environmental prediction, such as predicting the likely geomorphological impacts of intense rainfall and flash flood events \citep[e.g.][]{lane2007interactions,deluis2010rainfall,milan2012geomorphic}. Given the possibility of changing hydro-meteorological conditions that may accompany climate change \citep{Kendon2014}, longer-term prediction of catchment sediment yields and erosion patterns has also seen an increased research effort in recent years \citep{coulthard2000modelling,Coulthard2012,hancock2017sediment}, The drive to understand how landscapes respond to climatic conditions is aided greatly through the use of numerical landscape evolution models \citep{Tucker2010}, which allow a wide range of scenarios to be tested, and quantify the sensitivity of particular processes to climatic boundary conditions, including rainfall distribution.
