--- a/chapter_metdatamodels.tex
+++ b/chapter_metdatamodels.tex
@@ -8,13 +8,16 @@
 % Zoomed in location maps
 %
 %%%%%%%%%%%%%%%%
+\begin{chapquote}{Claude Monet \textit{}}
+``It's enough to drive one crazy, trying to depict the weather, the atmosphere, the ambience...
+\end{chapquote}
 
 \section{Introduction}
 %This chapter discusses the various sources of meteorological data and numerical models used to generate rainfall input to the landscape evolution models discussed in Chapters \ref{chapter_landscape_evol} and \ref{RainfallInLEMs}. In this thesis, two sources of rainfall data were used to drive the hydrological inputs of landscape evolution models: precipitation radar data from the UK 1km rainfall radar composite product (Section \ref{NIMROD}) and rainfall outputs from a numerical weather prediction model (Section \ref{WRF}
 
-Rainfall data can be derived from a number of measurement sources, both direct and indirect, depending on the intended use of the data and the temporal and spatial availability of data sources.
+Measuring and predicting rainfall has been a central activity to meteorological and hydrological sciences for centuries. The importance of having good estimates of rainfall for understanding hydrological processes was recognised by \citet{perrault1674}, particularly for understanding the role of rainfall in the water cycle \citep{biswas1970history}. Historically, the earliest hydrometerological observations in Britain were recorded by Bede the Venerable (672--735) \citep{mcculloch1993history}. Quantitative measurement of rainfall with instrumentation in the UK is attributed to Christopher Wren and Robert Hooke \citep{biswas1970history}, who developed a precursor to the modern tipping-bucket raingauge, though numerous records of rainfall measurement have been noted in other societies predating efforts in Britain. \citep{strangeways2010history}. Quantifying the amount of rainfall that has fallen in a given area over a period of time is referred to formally as \textit{quantitative precipitation estimation} \citep{fabry2015radar} and its prediction ahead of time as \textit{quantitative precipitation forecasting} \citep{golding2000quantitative,browning2003quantitative}.
 
-Uses... 
+For landscape evolution modelling... gridded rainfall products.
 
 \subsection{Rainfall data sources}
 % Raingague
