--- a/chapter_rainfallLEMs.tex
+++ b/chapter_rainfallLEMs.tex
@@ -1,6 +1,10 @@
-\chapter{Rainfall representation in current landscape evolution models}
+\chapter{Rainfall representation in landscape evolution models}
 \label{chapter_RainfallInLEMs}
 \chaptermark{Rainfall representation in current models}
+
+\begin{chapquote}{Claude Monet \textit{}}
+``Landscape does not exist in its own right, since its appearance changes at every moment; but the surrounding atmosphere brings it to life'' 
+\end{chapquote}
 
 \section{Introduction}
 This chapter reviews how current landscape evolution models represent rainfall input into the landscape system. It is worth stating here what exactly is meant by rainfall input, in the context of the atmosphere--land-surface system as represented in numerical models. Perhaps equally as importantly, it is worth discussing what aspects of rainfall are \textit{not} represented at all in any numerical models of landscape evolution, to clarify how geomorphologists conceptually think of meteorological processes acting on the landscape.
@@ -132,7 +136,7 @@ In the model domain, rainfall input values for each node are now calculated indi
 
 The capabilities of landscape evolution models have evolved in tandem with research needs in a piecemeal fashion. As climate change has become an important factor in driving research needs and interests, landscape evolution models have evolved themselves to cater for a range of climatic parameterisations at a range of time scales. Two-dimensional\footnote{Or 2.5-dimensional, if the elevation variable is considered a limited 3rd dimension, in the sense that elevation can go up or down in landscape evolution models, though the underlying process representation remains restricted two-dimensions in the \(x,y\) plane. For example water flow and sediment transport is not fully realised in 3D in any current landscape evolution model.} numerical models are increasingly used for forecasting and predictive purposes, as well as just answering theoretical research driven questions. Despite their potential however, 2D models of landscape evolution are only beginning to be developed to allow detailed spatial variation in many of the climatic variables, such as rainfall. This is seen in the CHILD landscape evolution model work of Han and Gasparini (2015) as well of the development of CAESAR-Lisflood (Coulthard and Skinner, 2016) to simulate spatially variable rainfall input fields. 
 
-Recent advances in landscape evolution modelling have coupled hydrological model components with the core erosional process modules to produce truly hydrodynamic models that do not assume steady state discharge. For example the CAESAR-Lisflood model (Coultard et al., 2013), Landlab modelling framework (Tucker et al., 2015), and tRIBS model [CITE] all contain forms of distributed hydrological models to simulate the transfer of water as well as sediment between grid cells or nodes. At longer timescales, the meteorological processes representing rainfall over a landscape have been parameterised, though the detail of these parameterisation schemes can be quite sophisticated (e.g. Han and Gasparini, 2015).
+Recent advances in landscape evolution modelling have coupled hydrological model components with the core erosional process modules to produce truly hydrodynamic models that do not assume steady state discharge. For example the CAESAR-Lisflood model (Coultard et al., 2013), Landlab modelling framework (Tucker et al., 2015), and tRIBS model \citep{vivoni2011real} all contain forms of distributed hydrological models to simulate the transfer of water as well as sediment between grid cells or nodes. At longer timescales, the meteorological processes representing rainfall over a landscape have been parameterised, though the detail of these parameterisation schemes can be quite sophisticated (e.g. Han and Gasparini, 2015).
 
 \section{Research needs for landscape evolution modelling}
 
