--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@
 
 \section{Overview}
 
-Intense rainfall has the power to cause flash flooding and drive rapid landscape change in the course of a single storm. Rainfall is one of several controls on runoff generation, flood inundation, and sediment dynamics during storms. Understanding how river catchments are sensitive to rainfall patterns during severe storms is important for imporving our ability to predict flood events and the impact they have on the landscape.  Flash floods and the geomorphic effects they have on the landscape pose a risk to communities living in the vicinity of rivers and their floodplains. The majority of the world's population live in temperate or sub-tropical climate regions on the Earth, where water is one of the main forces acting on the landscape and presents a risk to large populations living in proximity to rivers and their floodplains. Flash flooding from intense rainfall can lead to catastrophic consequences for the communities it affects, including loss of life, economic impacts, and damage to the environment. The economic damages in years with substantial flooding events can be costly to residents, businesses, and government. The average economic cost of flooding is estimated at around £1.1 billion annually in England, which could rise to as much as £27 billion by 2080 \citep{bennett2014flood}. The year-to-year impacts from flooding are highly variable, for example, the total costs of the 2007 flooding in the UK was estimated at £3 billion. Outwith the UK, global economic costs due to flooding in the same year were approximately £40 billion \citep{pitt2008pitt}. The variability in the severity of flooding from year-to-year can make mitigation planning difficult, as there is a large degree of natural variability as well as a general increase in likelihood of intense rainfall events in the UK \citep{Kendon2014}. 
+Intense rainfall has the power to cause flash flooding and drive rapid landscape change in a single storm. Rainfall input to river catchments is one of several controls on runoff generation, flood inundation, and sediment dynamics during storms. Understanding how river catchments are sensitive to rainfall patterns during severe storms is important for imporving our ability to predict flood events and the impact they have on the landscape.  Flash floods and the geomorphic effects they have on the landscape pose a risk to communities living in the vicinity of rivers and their floodplains. The majority of the world's population live in temperate or sub-tropical climate regions on the Earth, where water is one of the main forces acting on the landscape and presents a risk to large populations living in proximity to rivers and their floodplains. Flash flooding from intense rainfall can lead to catastrophic consequences for the communities it affects, including loss of life, economic impacts, and damage to the environment. The economic damages in years with substantial flooding events can be costly to residents, businesses, and government. The average economic cost of flooding is estimated at around £1.1 billion annually in England, which could rise to as much as £27 billion by 2080 \citep{bennett2014flood}. The year-to-year impacts from flooding are highly variable, for example, the total costs of the 2007 flooding in the UK was estimated at £3 billion. Outwith the UK, global economic costs due to flooding in the same year were approximately £40 billion \citep{pitt2008pitt}. The variability in the severity of flooding from year-to-year can make mitigation planning difficult, as there is a large degree of natural variability as well as a general increase in likelihood of intense rainfall events in the UK \citep{Kendon2014}. 
 
 %Importance for longer term geomorphic theory.
 Storm events also drive landscape evolution over longer timescales through the cumulative effects of flash flood events over decades and centuries, as well as global changes in the Earth's atmosphere and tectonic activity \citep{Molnar1990,Molnar2001,whipple2006orogen}. Understanding the sensitivity of catchment-scale erosional processes to rainfall variability is therefore important to increasing our knowledge of landscape evolution theory. The duration and intensity of storms is known to have an effect on the long term morphological evolution of landscapes \citep{Solyom2004,solyom2007importance}, as is the effect of orographic precipitation on mountain range morphology \citep{han2015measuring}.
