--- a/literature.bib
+++ b/literature.bib
@@ -4152,4 +4152,89 @@ DOI = {10.5194/hess-2016-530}
   year={2011},
   publisher={Elsevier}
 }
+@article{schaake2007hepex,
+  title={HEPEX: the hydrological ensemble prediction experiment},
+  author={Schaake, John C and Hamill, Thomas M and Buizza, Roberto and Clark, Martyn},
+  journal={Bulletin of the American Meteorological Society},
+  volume={88},
+  number={10},
+  pages={1541--1547},
+  year={2007}
+}
+@inproceedings{skinner2017lemsi,
+  title={The Landscape Evolution Model Sensitivity Investigation},
+  author={Skinner, Christopher and Coulthard, Tom and Schwanghart, Wolfgang and Van De Wiel, Marco},
+  booktitle={EGU General Assembly Conference Abstracts},
+  volume={19},
+  year={2017}
+}
+@article{perrault1674,
+  title={De l’origine des fontaines},
+  year={1674},
+  author={Perrault, Pierre},
+  journal={Carbonnel J.-P.({\'e}d.), Textes fondateurs de l’hydrologie, Asni{\`e}res, CNFSH, Commission de terminologie}
+}
+@article{mcculloch1993history,
+  title={History of forest hydrology},
+  author={McCulloch, James SG and Robinson, Mark},
+  journal={Journal of Hydrology},
+  volume={150},
+  number={2-4},
+  pages={189--216},
+  year={1993},
+  publisher={Elsevier}
+}
+@book{biswas1970history,
+  title={History of hydrology},
+  author={Biswas, Asit K},
+  year={1970},
+  publisher={North-Holland Amsterdam}
+}
+@article{biswas1968beginning,
+  title={Beginning of Qualitative Hydrology},
+  author={Biswas, Asit K},
+  journal={Journal of the Hydraulics Division},
+  volume={94},
+  number={5},
+  pages={1299--1316},
+  year={1968},
+  publisher={ASCE}
+}
+@article{strangeways2010history,
+  title={A history of rain gauges},
+  author={Strangeways, Ian},
+  journal={Weather},
+  volume={65},
+  number={5},
+  pages={133--138},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@article{browning2003quantitative,
+  title={Quantitative precipitation forecasting},
+  author={Browning, KA},
+  journal={Weather},
+  volume={58},
+  number={3},
+  pages={126--127},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+@article{golding2000quantitative,
+  title={Quantitative precipitation forecasting in the UK},
+  author={Golding, BW},
+  journal={Journal of Hydrology},
+  volume={239},
+  number={1},
+  pages={286--305},
+  year={2000},
+  publisher={Elsevier}
+}
+@book{fabry2015radar,
+  title={Radar Meteorology: Principles and Practice},
+  author={Fabry, Fr{\'e}d{\'e}ric},
+  year={2015},
+  publisher={Cambridge University Press}
+}
+
 
