--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,8 @@
 %\includeonly{chapter_events,chapter_geomorph}
 %\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
-\includeonly{conclusions}
+%\includeonly{conclusions}
+\includeonly{chapter_metdatamodels}
 
 
 \usepackage{rotating}
