--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -16,13 +16,17 @@
 %\def\declaration{All the work in this thesis has been sourced from Google.}
 
 \beforeabstract
-This thesis addresses a limitation in numerical models of landscape evolution regarding how the spatial variation of precipitation is represented or parameterised within such models. Numerical models of landscape evolution typically forsake a realistic representation of rainfall patterns in favour of a simpler treatments of rainfall as being spatially homogeneous across the model domain, despite the fact that many geomorphic processes being sensitive to thresholds of sediment entrainment and transport, driven by the movement of water within the landscape. The thesis presents the development and application of a series of computer-based models of landscape evolution with improved routines for the representation of rainfall spatial variability. These modifications are then applied to exploring the sensitivity of landscapes to spatial variation in rainfall inputs over a range of timescales from single storm events, to longer term topographic evolution. 
+The contribution of this thesis is twofold: 1) The development of a hydrodynamic landscape evolution model for use on high-performance computing systems and 2) Assessing the sensitivity of hydrogeomorphic processes to high-resolution rainfall input data using the model.
 
-The thesis starts by exploring current limitations in rainfall representation in landscape evolution models, followed by an assessment of precipitation data sources that could be potentially used as realistic inputs to landscape evolution models. Models of synthetic rainfall generation are also discussed in this section. A numerical model of landscape evolution is developed for deployment on high-performance parallel computing systems, based on the established CAESAR-Lisflood model (Coulthard et al., 2013). This model is benchmarked, showing performance benefits compared with the serial code. The improved model code is shown to produce results commensurate with the CAESAR-Lisflood model it is developed from.
+The thesis addresses a limitation in numerical landscape evolution models regarding how spatial variation in rainfall is represented or parameterised within such models. Typically, landscape evolution models forsake a realistic representation of rainfall patterns in favour of a simpler treatments of rainfall as being spatially homogeneous across the model domain. The simplification in rainfall inputs is still made despite the fact that many geomorphological processes are sensitive to thresholds of sediment entrainment and transport, driven by the distribution and movement of water within the landscape. 
 
-The model is applied to assessing the sensitivity of fluvial erosional processes within river catchments to the spatial variation in rainfall during extreme storm events. Two real storm events that triggered flooding in the UK in 2004 and 2005 are used a test cases. Landscape response to single storm events is shown to be sensitive to the spatial resolution of radar rainfall input across the model domain.
+The thesis starts by exploring current limitations in rainfall representation in landscape evolution models, and assesses various precipitation data sources that could be potentially used as more realistic rainfall inputs to landscape evolution models. A numerical model of landscape evolution is developed for deployment on high-performance parallel computing systems, based on the established CAESAR-Lisflood model \citep{Coulthard2013}. The new model code is benchmarked, showing performance benefits compared with the serial code. The improved model code is shown to produce results commensurate with the CAESAR-Lisflood model it is based on.
 
-Finally, a software framework is presented for driving a landscape evolution model with input from a numerical weather prediction model. Using high-resolution NWP simulations of 250m grid spacing, mesoscale rainfall features are resolved at the river catchment scale. The UK storm case studies described in the previous chapter are re-assessed using data from NWP simulations of each case to investigate the response of catchments to the mesoscale details of severe rainfall events.
+The model is applied to assessing the sensitivity of flood-inundation predictions, sediment flux, and erosion distribution within river catchments to spatial variation in rainfall during extreme storm events. Two real storm events that caused localised flash flooding in the UK are used a test cases: the Boscastle storm of 2004 and the North York Moors storm of 2005. 
+
+Flood extent predictions and river discharges are found to be sensitive to the use of spatially variable input rainfall data, with high-resolution rainfall data leading to larger peak flood discharges. The role of sediment erosion during large floods is also assessed, but it is found to play a minor role relative to spatially variable rainfall data. In contrast, the geomorphological response of catchments (sediment flux and fluvial erosion) to single storm events is shown to be less sensitive to the spatial heterogeneity of rainfall input and controlled more strongly by the choice of erosional process parameterisation within the model.
+
+%Finally, a software framework is presented for driving a landscape evolution model with input from a numerical weather prediction model. Using high-resolution NWP simulations of 250m grid spacing, mesoscale rainfall features are resolved at the river catchment scale. The UK storm case studies described in the previous chapter are re-assessed using data from NWP simulations of each case to investigate the response of catchments to the mesoscale details of severe rainfall events.
 %To explore the effects of rainfall spatial variability at longer timescales of topographic evolution, the CHILD landscape evolution model (Tucker et al., 2001) is developed to incorporate a model of spatially-limited storm morphology. The rainfall model is designed to represent the typical intense rainfall associated with convective storm cells.
 
 
