Added new files and diagrams

--- a/chapter_LEMs.tex
+++ b/chapter_LEMs.tex
@@ -182,7 +182,7 @@ Ideally, one should address uncertainty by first assessing which parameters the 
 
 Methods such as ensemble analysis should be considered, whereby multiple instances of the same simulation are run, with a range of parameters chosen from a probability distribution to assess the most likely outcomes from a model. While uncertainty cannot be removed entirely from modelling studies, it is useful to be able to state the most probable outcome(s), based on a probabilistic distribution of input conditions.
 
-Uncertainty is a particular challenge in landscape evolution modelling as many processes are threshold dependent, or scale non-linearly (Schumm, 1979). In choosing parameter values, guidance should be taken from reported values of such parameters in the published literature. Readers are referred to Chapter 5.2, Numerical Modelling, (Hutton, 2012) for further discussion of uncertainty, as well as the review by (Pelletier et al., 2015), and LEM studies that have explored uncertainty in more detail (Hancock et al., 2015a; Mudd et al., 2014; Temme et al., 2011).
+Uncertainty is a particular challenge in landscape evolution modelling (Hutton, 2012; Pelletier et al., 2015) as many processes are threshold dependent, or scale non-linearly (Schumm, 1979). In choosing parameter values, guidance can be taken from published values of such parameters derived for similar environments, particularly when they have been calibrated with field data, where available (e.g. Hancock et al., 2015a; Mudd et al., 2014; Temme et al., 2011).
 
 \subsection{Sensitivity and Calibration}
 Following earlier definitions, (Oreskes et al., 1994; Trucano and Swiler, 2006) calibration is defined here as the selection and modification of input parameters of a model in order that they maximise agreement with observed data in real landscapes. Such parameters in LEMs might include the coefficient terms in fluvial erosion laws, for example the K, m, and n parameters in the stream power law (Seidl and Dietrich, 1992), hydrological parameters such as Manning’s n (Manning et al., 1890), or the threshold shear stresses required to initiate erosion (Snyder et al., 2003). Many such parameters are not directly quantifiable by field measurement, and model users should consult similar studies for recommended values, or conduct their own sensitivity analyses to constrain uncertainty in parameter choice. Other parameters may lend themselves to more rigorous methods of calibration, where they link directly or indirectly to measurable values in the field. Examples would include the calibration of hydrological parameters to produce a ‘best fit’ with observed discharge values at river gauging stations (e.g. Coulthard et al., 2013; Wong et al., 2015), constraining stream power law parameters using statistical models and sensitivity analyses (Croissant and Braun, 2014; Mudd et al., 2014), or the field measurement of sediment shear strength to assist in setting erosion threshold parameters (see Chapter 1.3.1, Grabowski, 2014).
