--- a/literature.bib
+++ b/literature.bib
@@ -4236,5 +4236,160 @@ DOI = {10.5194/hess-2016-530}
   year={2015},
   publisher={Cambridge University Press}
 }
-
-
+@inproceedings{harrison2009high,
+  title={High-resolution precipitation estimates for hydrological uses},
+  author={Harrison, Dawn Lesley and Scovell, Robert Wesley and Kitchen, Malcolm},
+  booktitle={Proceedings of the Institution of Civil Engineers-Water Management},
+  volume={162},
+  number={2},
+  pages={125--135},
+  year={2009},
+  organization={Thomas Telford Ltd}
+}
+@inproceedings{harrison2012radar,
+  title={Radar products for hydrological applications in the UK},
+  author={Harrison, Dawn Lesley and Norman, Katie and Pierce, Clive and Gaussiat, Nicolas},
+  booktitle={Proceedings of the Institution of Civil Engineers-Water Management},
+  volume={165},
+  number={2},
+  pages={89--103},
+  year={2012},
+  organization={Thomas Telford Ltd}
+}
+@inproceedings{peura2007using,
+  title={Using radar data quality in computing composites and nowcasting products},
+  author={Peura, Markus and Koistinen, J},
+  booktitle={33rd Conference on Radar Meteorology},
+  year={2007}
+}
+@article{wilson2014best,
+  title={Best practices for scientific computing},
+  author={Wilson, Greg and Aruliah, DA and Brown, C Titus and Hong, Neil P Chue and Davis, Matt and Guy, Richard T and Haddock, Steven HD and Huff, Kathryn D and Mitchell, Ian M and Plumbley, Mark D and others},
+  journal={PLoS Biol},
+  volume={12},
+  number={1},
+  pages={e1001745},
+  year={2014},
+  publisher={Public Library of Science}
+}
+@article{clevis2006simple,
+  title={A simple algorithm for the mapping of TIN data onto a static grid: applied to the stratigraphic simulation of river meander deposits},
+  author={Clevis, Quintijn and Tucker, Gregory E and Lancaster, Stephen T and Desitter, Arnaud and Gasparini, Nicole and Lock, Gary},
+  journal={Computers \& geosciences},
+  volume={32},
+  number={6},
+  pages={749--766},
+  year={2006},
+  publisher={Elsevier}
+}
+@article{marshall1947measurement,
+  title={Measurement of rainfall by radar},
+  author={Marshall, JS and Langille, RC and Palmer, W Mc K},
+  journal={Journal of Meteorology},
+  volume={4},
+  number={6},
+  pages={186--192},
+  year={1947}
+}
+@article{newson1979results,
+  title={The results of ten years' experimental study on Plynlimon, mid-Wales, and their importance for the water industry},
+  author={Newson, MD},
+  journal={Journal of Institution of Water Engineers and Scientists},
+  volume={33},
+  number={4},
+  pages={321--333},
+  year={1979}
+}
+@article{habib2001sampling,
+  title={Sampling errors of tipping-bucket rain gauge measurements},
+  author={Habib, Emad and Krajewski, Witold F and Kruger, Anton},
+  journal={Journal of Hydrologic Engineering},
+  volume={6},
+  number={2},
+  pages={159--166},
+  year={2001},
+  publisher={American Society of Civil Engineers}
+}
+@article{ciach2003local,
+  title={Local random errors in tipping-bucket rain gauge measurements},
+  author={Ciach, Grzegorz J},
+  journal={Journal of Atmospheric and Oceanic Technology},
+  volume={20},
+  number={5},
+  pages={752--759},
+  year={2003}
+}
+@incollection{ebert2007methods,
+  title={Methods for verifying satellite precipitation estimates},
+  author={Ebert, Elizabeth E},
+  booktitle={Measuring precipitation from space},
+  pages={345--356},
+  year={2007},
+  publisher={Springer}
+}
+@article{golding2000quantitative,
+  title={Quantitative precipitation forecasting in the UK},
+  author={Golding, BW},
+  journal={Journal of Hydrology},
+  volume={239},
+  number={1},
+  pages={286--305},
+  year={2000},
+  publisher={Elsevier}
+}
+@article{harrison2000improving,
+  title={Improving precipitation estimates from weather radar using quality control and correction techniques},
+  author={Harrison, DL and Driscoll, SJ and Kitchen, M},
+  journal={Meteorological Applications},
+  volume={7},
+  number={2},
+  pages={135--144},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+@article{simpson1988proposed,
+  title={A proposed tropical rainfall measuring mission (TRMM) satellite},
+  author={Simpson, Joanne and Adler, Robert F and North, Gerald R},
+  journal={Bulletin of the American meteorological Society},
+  volume={69},
+  number={3},
+  pages={278--295},
+  year={1988}
+}
+@article{hou2014global,
+  title={The global precipitation measurement mission},
+  author={Hou, Arthur Y and Kakar, Ramesh K and Neeck, Steven and Azarbarzin, Ardeshir A and Kummerow, Christian D and Kojima, Masahiro and Oki, Riko and Nakamura, Kenji and Iguchi, Toshio},
+  journal={Bulletin of the American Meteorological Society},
+  volume={95},
+  number={5},
+  pages={701--722},
+  year={2014},
+  publisher={American Meteorological Society}
+}
+@article{wilson1979radar,
+  title={Radar measurement of rainfall—A summary},
+  author={Wilson, James W and Brandes, Edward A},
+  journal={Bulletin of the American Meteorological Society},
+  volume={60},
+  number={9},
+  pages={1048--1058},
+  year={1979}
+}
+@article{gunn1949terminal,
+  title={The terminal velocity of fall for water droplets in stagnant air},
+  author={Gunn, Ross and Kinzer, Gilbert D},
+  journal={Journal of Meteorology},
+  volume={6},
+  number={4},
+  pages={243--248},
+  year={1949}
+}
+@article{joss1969raindrop,
+  title={Raindrop size distribution and sampling size errors},
+  author={Joss, J and Waldvogel, A},
+  journal={Journal of the Atmospheric Sciences},
+  volume={26},
+  number={3},
+  pages={566--569},
+  year={1969}
+}
