--- a/appendices.tex
+++ b/appendices.tex
@@ -3,49 +3,47 @@
 
 \chapter{Core code for the HAIL-CAESAR model}
 
-
-
-
-\lstdefinestyle{customcpp}{
-  belowcaptionskip=1\baselineskip,
-  breaklines=true,
-  %xleftmargin=\parindent,
-  language=C++,
-  showstringspaces=false,
-  basicstyle=\footnotesize\ttfamily,
-  keywordstyle=\bfseries\color{green!40!black},
-  commentstyle=\itshape\color{purple!40!black},
-  identifierstyle=\color{blue},
-  stringstyle=\color{orange},
- }
-  
-\lstinputlisting[language=C++,style=customcpp]{Code/LSDCatchmentModel.cpp}
+%\lstdefinestyle{customcpp}{
+%  belowcaptionskip=1\baselineskip,
+%  breaklines=true,
+%  %xleftmargin=\parindent,
+%  language=C++,
+%  showstringspaces=false,
+%  basicstyle=\footnotesize\ttfamily,
+%  keywordstyle=\bfseries\color{green!40!black},
+%  commentstyle=\itshape\color{purple!40!black},
+%  identifierstyle=\color{blue},
+%  stringstyle=\color{orange},
+% }
+%  
+%\lstinputlisting[language=C++,style=customcpp]{/mnt/SCRATCH/Dev/HAIL-CAESAR/LSDCatchmentModel.cpp}
 
 \chapter{NIMROD-processing code}
+\label{appendix_nimrod_code}
 
 \lstdefinestyle{mypy}{
   language=Python,
   backgroundcolor=\color{white}, %%%%%%%
-  basicstyle=\ttm,
+  basicstyle=\footnotesize\ttfamily,
   breaklines=true,
   otherkeywords={self},            
-  keywordstyle=\ttb\color{deepblue},
+  keywordstyle=\bfseries\color{blue},
   emph={MyClass,__init__},          
-  emphstyle=\ttb\color{deepred},    
-  stringstyle=\color{deepgreen},
+  emphstyle=\bfseries\color{purple!40!black},    
+  stringstyle=\color{green!40!black},
   commentstyle=\color{red},  %%%%%%%%
   frame=tb,                         
   showstringspaces=false            
 }
 
 \section{NIMROD data conversion code}
-\lstinputlisting[language=Python,style=mypy]{Code/NIMROD_convert.py}
+\lstinputlisting[language=Python,style=mypy]{/mnt/SCRATCH/Dev/nimrod-toolbox/NIMROD_convert.py}
 
 \section{NIMROD rainfall timeseries creation code}
-\lstinputlisting[language=Python,style=mypy]{Code/NIMROD_timeseries.py}
+\lstinputlisting[language=Python,style=mypy]{/mnt/SCRATCH/Dev/nimrod-toolbox/NIMROD_timeseries.py}
 
 \section{Code for creating HAIL-CAESAR hydroindex file}
-\lstinputlisting[language=Python,style=mypy]{Code/create_hydroindex.py}
+\lstinputlisting[language=Python,style=mypy]{/mnt/SCRATCH/Dev/nimrod-toolbox/create_hydroindex.py}
 
 
 \chapter{Swath profiling algorithm and code}
