--- a/thesis.tex
+++ b/thesis.tex
@@ -13,7 +13,7 @@
 %\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
 %\includeonly{conclusions}
-\includeonly{chapter_metdatamodels}
+%\includeonly{chapter_metdatamodels}
 
 
 \usepackage{rotating}
@@ -22,7 +22,8 @@
 %\linenumbers
 \usepackage{listings}
 %\usepackage{epigraph}
-\usepackage{xcolor}
+\usepackage[dvipsnames]{xcolor}
+\usepackage{textcomp}
 \usepackage{hyperref}
 \hypersetup{colorlinks=true,allcolors={blue!50!black}}
 \usepackage{hypcap}
@@ -87,11 +88,11 @@
 % Chapter 2 is a general overview and introduction to landscape evol. modelling
 \include{chapter_LEMs}
 
-% Chapter 3 is an overview of meteorlogical data sources and model data.
-\include{chapter_metdatamodels}
-
-% Chapter 4 is a more focused review of rainfall representation in LEMs
+% Chapter 3 is a more focused review of rainfall representation in LEMs
 \include{chapter_rainfallLEMs}
+
+% Chapter 4 is an overview of meteorlogical data sources and model data.
+\include{chapter_metdatamodels}
 
 %=-=-=-=-=-=-=-=-=-=
 % MODEL DEVELOPMENT
@@ -256,7 +257,7 @@
 \appendix
 %\include{appendix_wrf_lem}
 
-%\include{appendices}
+\include{appendices}
 
 %APPENDICES
 %
