--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -56,6 +56,13 @@ Flood extent predictions and river discharges are found to be sensitive to the u
 %
 %I wish I could write that this PhD had been an enjoyable experience, but truth be told, on the whole it has been the most depressing, demoralising, and soul-destroying experience of my life. I would have quit several years ago, but carried on obstinately out of a vague notion of duty to those who have supported and encouraged me along the way. In all honesty, I regret doing this PhD and the years I have lost from undertaking it.
 %\\ \\
-The research project was funded by the Natural Environment Research Council doctoral training grant number NE/L501591/1.
+\noindent
+This work was funded by the Natural Environment Research Council doctoral training grant number NE/L501591/1.
+\\~\\
+\noindent
+Data was provided by the British Atmospheric Data Centre, the Environment Agency (England), Cyfoeth Naturiol (Natural Resources Wales), Ordnance Survey Open Data, and the National River Flow Archives. 
+\\~\\
+\noindent
+This work used the ARCHER UK National Supercomputing Service (\url{http://www.archer.ac.uk}) and the Centre for Environmental Data Analysis JASMIN computing facility (\url{http://www.jasmin.ac.uk/}).
 % The next line is NOT optional and MUST appear
 \afterpreface
